[gd_scene load_steps=5 format=3 uid="uid://itkhdedpajiw"]

[ext_resource type="Theme" uid="uid://r2ps60h61gx5" path="res://main_theme.tres" id="1_bsdl0"]
[ext_resource type="Script" uid="uid://w2v8akhtrcwc" path="res://Scripts/selection.gd" id="2_geedh"]
[ext_resource type="StyleBox" uid="uid://cgxwrhnuyhe72" path="res://Styles/decision_panel_style.tres" id="2_vjvyd"]
[ext_resource type="PackedScene" uid="uid://5ii4odjs77y8" path="res://Scenes/delete_button.tscn" id="4_7n71i"]

[node name="Selection" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_bsdl0")
theme_override_styles/panel = ExtResource("2_vjvyd")
script = ExtResource("2_geedh")

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="Data" type="VBoxContainer" parent="ContentMargin"]
layout_mode = 2

[node name="ChoiceAndButtons" type="HBoxContainer" parent="ContentMargin/Data"]
layout_mode = 2

[node name="ChoiceLabel" type="Label" parent="ContentMargin/Data/ChoiceAndButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_bsdl0")
text = "Choice"

[node name="Delete" parent="ContentMargin/Data/ChoiceAndButtons" instance=ExtResource("4_7n71i")]
layout_mode = 2

[node name="DecisionAndTime" type="HBoxContainer" parent="ContentMargin/Data"]
layout_mode = 2

[node name="DecisionLabel" type="Label" parent="ContentMargin/Data/DecisionAndTime"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_bsdl0")
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_font_sizes/font_size = 64
text = "Decision"

[node name="TimeLabel" type="Label" parent="ContentMargin/Data/DecisionAndTime"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_font_sizes/font_size = 48
text = "12:11PM 12/10/25"

[connection signal="pressed" from="ContentMargin/Data/ChoiceAndButtons/Delete" to="." method="_on_delete_button_pressed"]
